@@ -1,0 +1,7 @@
+# BEGIN PLOT /CMS_2012_I1193338/d01-x01-y01 
+Title=$\sigma_\text{inel}$ at $\sqrt{s}=7$ TeV
+XCustomMajorTicks=0.5	$\xi>5x10^{-6}$	1.5	$n_\text{ch} > 1$	2.5	$n_\text{ch} > 2$	3.5	$n_\text{ch} > 3$
+YLabel=$\sigma_\text{inel}$ [mb]
+LegendYPos=0.4
+LogY=0
+# END PLOT
