@@ -1,0 +1,26 @@
+<?xml version="1.0" encoding="ISO-8859-1" ?>
+<!DOCTYPE aida SYSTEM "http://aida.freehep.org/schemas/3.3/aida.dtd">
+<aida version="3.3">
+  <implementation version="1.0" package="LWH"/>
+  <dataPointSet name="d01-x01-y01"
+    title="" path="/REF/CMS_2012_I1193338" dimension="2">
+    <dimension dim="0" title="" />
+    <dimension dim="1" title="" />
+    <dataPoint>
+      <measurement value="0.5" errorPlus="0.5" errorMinus="0.5"/>
+      <measurement value="60.2" errorPlus="2.6476404589747453" errorMinus="2.6476404589747453"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement value="1.5" errorPlus="0.5" errorMinus="0.5"/>
+      <measurement value="58.7" errorPlus="3.1240998703626617" errorMinus="3.1240998703626617"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement value="2.5" errorPlus="0.5" errorMinus="0.5"/>
+      <measurement value="57.2" errorPlus="3.1240998703626617" errorMinus="3.1240998703626617"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement value="3.5" errorPlus="0.5" errorMinus="0.5"/>
+      <measurement value="55.4" errorPlus="3.1240998703626617" errorMinus="3.1240998703626617"/>
+    </dataPoint>
+  </dataPointSet>
+</aida>
