@@ -1,3 +1,9 @@
+2012-12-17  Hendrik Hoeth <hendrik.hoeth@cern.ch>
+
+	* Added CMS_2012_I1193338 analysis
+
+	* Fixed xi cut in ATLAS_2011_I894867
+
 2012-12-17  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Adding analysis descriptions to the HTML analysis page ToC.
